--- a/calendario.html
+++ b/calendario.html
@@ -52,20 +52,17 @@
                 language: 'pt-BR',
                 locale: 'pt-BR',
                 beforeShowDay: function (date) {
-                    var dataCalendario = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate(); 
-                    
-                    if (procurarElementoJsonArray(periodo.toString(), "periodo") && procurarElementoJsonArray(dataCalendario, 'data')) {
-                        return 'active periodo1';  
+                    var dataCalendario = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate();
+
+                    if (procurarElementoJsonArray(periodo.toString(), dataCalendario) && periodo == 1) {
+                        return 'active periodo1';
                     }
-                    else if (procurarElementoJsonArray(periodo.toString(), "periodo") && procurarElementoJsonArray(dataCalendario, 'data')) {
-                        return  'active periodo2';
+                    else if (procurarElementoJsonArray(periodo.toString(), dataCalendario) && periodo == 2) {
+                        return 'active periodo2';
                     }
-                    else if (procurarElementoJsonArray(periodo.toString(), "periodo") && procurarElementoJsonArray(dataCalendario, 'data')) {
-                        return  'active periodo3';                        
+                    else if (procurarElementoJsonArray(periodo.toString(), dataCalendario) && periodo == 3) {
+                        return 'active periodo3';
                     }
-                    return {
-                        Classes: retornoClasse
-                    };
                 }
             });
         };
@@ -86,15 +83,9 @@
     };
 
 
-    function procurarElementoJsonArray(elemento, key) {
-        var encontrado = false;
-        elemento = trimString(elemento); // trim it
-        for (var i = 0; i < listaPeriodoData.length; i++) {
-                if (listaPeriodoData[i][key].toString().indexOf(elemento) != -1) {
-                    encontrado = true;
-                }
-        }
-        return encontrado;
+    function procurarElementoJsonArray(periodo, data) {
+        var arrayFiltrado = listaPeriodoData.filter(obj => obj.periodo == periodo && obj.data == data);
+        return (arrayFiltrado.length > 0);
     }
 
     function trimString(s) {
@@ -103,12 +94,4 @@
         while (r > l && s[r] == ' ') r -= 1;
         return s.substring(l, r + 1);
     }
-
-    function compareObjects(o1, o2) {
-        var k = '';
-        for (k in o1) if (o1[k] != o2[k]) return false;
-        for (k in o2) if (o1[k] != o2[k]) return false;
-        return true;
-    }
-
 </script>
