--- a/periodo.html
+++ b/periodo.html
@@ -24,7 +24,7 @@
 
 		for (let i = 1; i <= qtdePeriodo; i++) {
 			textoLegenda = RetornarTextoLegenda(i);
-			htmlPeriodo += "<span>" + textoLegenda + "</span><p />\n"
+			htmlPeriodo += "<span class='nomeClasse'>" + textoLegenda + "</span><p />\n"
 		}
 
 		$("#dvPeriodo").append(htmlPeriodo);
