--- a/pesquisa/pesquisa.html
+++ b/pesquisa/pesquisa.html
@@ -2,21 +2,14 @@
 <head>
     <link rel="stylesheet" href="css/pesquisa.css" />
 	<script src="js/jquery.js"></script>
+	
     <meta charset="utf-8" />
 </head>
 <body>
 	 <div class="dropdown">
 	  <div id="myDropdown" class="dropdown-content">
 		<input type="text" placeholder="Pesquisar.." id="myInput">
-		<ul class="listItens">
-			<li><input type="checkbox" id="marcarTodos" onclick="marcarTodos()"><span>Selecionar todos</span></li>
-			<li><input type="checkbox"><span>About</span></li>
-			<li><input type="checkbox"><span>Base</span></li>
-			<li><input type="checkbox"><span>Blog</span></li>
-			<li><input type="checkbox"><span>Contact</span></li>
-			<li><input type="checkbox"><span>Custom</span></li>
-			<li><input type="checkbox"><span>Support</span></li>
-			<li><input type="checkbox"><span>Tools</span></li>		
+		<ul class="listItens invisivel">
 		</ul>
 	  </div>
 	</div>
@@ -25,16 +18,81 @@
 
 <script type="text/javascript">
 	$(document).ready(function(){
-	  $("#myInput").on("keyup", function() {
-		var value = $(this).val().toLowerCase();
-		$(".listItens li:not(:first-child)").filter(function() {
-		  $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-		});
+	  $("#myInput").on("keyup", function() { 
+		var textoPesquisa = $(this).val().toLowerCase();
+		if (textoPesquisa.length >= 3){
+			$(".listItens").removeClass("invisivel");
+			CarregarLista();
+			$(".listItens li:not(:first-child)").filter(function() {
+			  $(this).toggle($(this).text().toLowerCase().indexOf(textoPesquisa) > -1)			  
+			});
+			
+			if($('.listItens li:not([style*="display: none"])').length == 1){	
+				$(".listItens").html("<li><span>fornecedor não encontrado</span></li>");
+			}
+		}
+		else
+			$(".listItens").addClass("invisivel");
 	  });	  
 	});
 	
-	$("#marcarTodos").change(function () {
-		$("input:checkbox").prop('checked', $(this).prop("checked"));
-	});
-
+	function selecionarTodos(obj) {
+			$("input:checkbox").prop('checked', $(obj).prop("checked"));
+		};
+	
+	function CarregarLista(){
+		var arrayDados = [
+				{	
+					id : 0,
+					descricao : "Selecione todos"
+				},
+				{	
+					id : 1,
+					descricao : "Laranja"
+				},
+				{	
+					id : 2,
+					descricao : "Vermelho"
+				},
+				{	
+					id : 3,
+					descricao : "Azul"
+				},
+				{	
+					id : 4,
+					descricao : "Azul Turquesa"
+				},
+				{	
+					id : 5,
+					descricao : "Azul Escuro"
+				},
+				{	
+					id : 6,
+					descricao : "Verde"
+				},
+				{	
+					id : 7,
+					descricao : "Branco"
+				},
+				{	
+					id : 8,
+					descricao : "Cinza"
+				},
+				{	
+					id : 9,
+					descricao : "Roxo"
+				}
+			];
+		$(".listItens").html("");
+		$.each(arrayDados, function(index, valor){
+			if(index == 0){
+				$(".listItens").append('<li><input type="checkbox" id="marcarTodos" rel='+ valor.id + ' onchange="selecionarTodos(this)"><span>'+ valor.descricao +'</span></li>');
+			}
+			else{
+				$(".listItens").append('<li><input type="checkbox" rel='+ valor.id + '><span>'+ valor.descricao +'</span></li>');
+			}
+		})
+	};
+	
+	
 </script>
